// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@repay/repay-scripts should watch a basic library for local development 1`] = `
"import React from 'react';

function App(props) {
  return React.createElement(\\"div\\", {
    className: \\"AppWrapper\\"
  }, props.children);
}

export { App };
//# sourceMappingURL=build.esm.js.map
"
`;

exports[`@repay/repay-scripts should watch a basic library for local development 2`] = `
"import React from 'react';

function App(props) {
  return React.createElement(\\"div\\", {
    className: \\"AppWrapper Updated\\"
  }, props.children);
}

export { App };
//# sourceMappingURL=build.esm.js.map
"
`;
